# comp_graf-labs

./: .gitignore  LICENSE  README.md
Lab01/: .gitignore  CMakeLists.txt  CMakeSettings.json
Lab01/shaders/: curve.tcs  curve.tes  frag.glsl  vert.glsl
Lab01/src/: main.cpp
Lab01/src/core/: Shader.cpp  Shader.h
Lab01/src/modes/: CurveMode.cpp  CurveMode.h
lab6/: .gitignore  06.sln  06.vcxproj  CubeMap.cpp  CubeMap.h  MeshBuffer.cpp  MeshBuffer.h  README.md  ShaderClass.cpp  Texture2D.cpp  Texture2D.h  fragm.fs  main.cpp  shaderClass.h  skybox.fs  skybox.vs  verts.vs
